--- a/wishlist/templates/wishlist_ajax.html
+++ b/wishlist/templates/wishlist_ajax.html
@@ -5,9 +5,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
     $(document).ready(function(){
-      // $("button").click(function(){
-        $.get("http://localhost:8000/wishlist/json", function(data) {
-  
+        $.get("http://127.0.0.1:8000/wishlist/json", function(data) {
+            console.log(data)
           for (i=0;i<data.length;i++){
   
             $(".barang").append(`<tr><td>${data[i].fields.nama_barang}</td><td>${data[i].fields.harga_barang}</td><td>${data[i].fields.deskripsi}</td></tr>`)
@@ -17,7 +16,7 @@
         });
   
         $("#submit_btn").click(function(){
-        $.post("http://localhost:8000/wishlist/ajax/submit", {nama_barang: $("#nama_barang").val(),harga_barang:parseInt($("#harga_barang").val()),deskripsi:$("#deskripsi").val()} )
+        $.post("http://127.0.0.1:8000/wishlist/ajax/submit", {nama_barang: $("#nama_barang").val(),harga_barang:parseInt($("#harga_barang").val()),deskripsi:$("#deskripsi").val()} )
         })
     });
     </script>
@@ -48,12 +47,12 @@
             <td><input type="text" name="deskripsi" placeholder="" class="form-control" id="deskripsi"/></td>
         </tr>
         
-    <tr>
-        <td></td>
-        <td><button id="submit_btn">Buat Wishlist</button></td>    
-    </tr>
+        <tr>
+            <td></td>
+            <td><button id="submit_btn">Buat Wishlist</button></td>    
+        </tr>
     </table>
-  </form>
+</form>
   
   <div class="mt-3 px-5" >
     <h5>Sesi terakhir login: {{ last_login }}</h5>
